--- a/public/bundle.css
+++ b/public/bundle.css
@@ -1,3 +1,3 @@
-h1.svelte-1ucbz36{color:purple}
+main.svelte-yhk9yy{text-align:center;padding:1em;max-width:240px;margin:0 auto}h1.svelte-yhk9yy{color:#ff3e00;text-transform:uppercase;font-size:4em;font-weight:100}@media(min-width: 640px){main.svelte-yhk9yy{max-width:none}}
 
 /*# sourceMappingURL=bundle.css.map */
